scrapers documentation